Change auth method

--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
 	</div>
 	<div class='f' id='f'>
 		<p>
-			<input type='text' id='n' placeholder='Github User'/>
+			<input type='password' id='n' placeholder='request password'/>
 		</p>
-		<p>
-			<input type='password' id='p' placeholder='Password'/>
-		</p>
+		<h3 class='uh3'>连接workers</h3>
 	</div>
 	<p class='b' id='b'>
 		<input id='bt' type='button' value='Type→' onclick='typer()'>
