--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
 	<div id='nt'>
 	</div>
 	<div class='f' id='f'>
-		<p>
-			<input type='password' id='n' placeholder='request password'/>
+		<p id='tokeninput'>
+			<input type='text' id='n' placeholder='Token'/>
 		</p>
-		<h3 class='uh3'>连接workers</h3>
+		<p>
+			<input type='password' id='p' placeholder='Password'/>
+		</p>
+		<h3 class='uh3'>配置token</h3>
 	</div>
 	<p class='b' id='b'>
 		<input id='bt' type='button' value='Type→' onclick='typer()'>
 	</p>
-	<script src='./jcs/md.js'></script>
+	<script src='./jcs/olibrary.js'></script>
 	<script src='./jcs/q.js'></script>
 	<script src='./jcs/p.js'></script>
-	<script src='./jcs/base64.js'></script>
 	<script src='./jcs/g.js'></script>
 	<script src='./jcs/a.js'></script>
 	<script src='./jcs/m.js'></script>
-	<script src='./jcs/bueue.m.js'></script>
 </div>
 </html>
