--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 <div id='container'>
     <h2 id='t' class='t'>-O-</h2>
-    <div id='nt'>
+    <div id='noticeWrapper' class="noticeWrapper">
     </div>
     <div class='f' id='f'>
         <p id='tokeninput'>
@@ -32,10 +32,10 @@
         <p>
             <input type='password' id='p' placeholder='Password' />
         </p>
-        <h3 class='uh3'>配置token</h3>
+        <h3 class='uh3'>密码与token</h3>
     </div>
     <p class='b' id='b'>
-        <input id='bt' type='button' value='Type→' onclick='typer()'>
+        <input id='bt' type='button' value='Start' onclick='typer()'>
     </p>
     <script src='https://cdn.jsdelivr.net/npm/crypto-js@latest/crypto-js.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/js-base64@latest/base64.min.js'></script>
