--- a/editor.html
+++ b/editor.html
@@ -1,4 +1,4 @@
-<div id="nt"></div>
+<div id="noticeWrapper" class="noticeWrapper"></div>
 <div class='lb' style='opacity:0' id='lboard'>
     <!--Left Board-->
     <div class='rp' id='rp'>
@@ -6,19 +6,19 @@
     </div>
     <div class='fm'>
         <input type='search' id='search' placeholder='Search...' class='sinput'></input>
-        <button class='fb' onclick='eswitch()' id='fbtn'>O_o?</button>
+        <button class='fb' onclick='chooseSth()' id='fbtn'>O_o?</button>
     </div>
 </div>
 <div class='rb' style='opacity:0' id='rboard'>
     <!--SearchBoard-->
     <div class='sbr' id='sbr'>
-        <a class='closebtn' href='javasccript:void(0);' onclick='sbrclose()'>×</a>
+        <a class='closebtn' href='javasccript:void(0);' onclick='sbrClose()'>×</a>
     </div>
     <!--Right Board-->
     <div class='rbt'>
         <!--Right Board Top-->
         <input type='title' id='title' placeholder='Title...' class='tinput'></input>
-        <button class='adbtn' onclick='addnew()' id='adbtn'>+</button>
+        <button class='adbtn' onclick='addNew()' id='adbtn'>+</button>
         <img class='tagico' src='./pics/tag.png'></img><input type='tag' id='tag' placeholder='Tags...' class='taginput'></input>
         <img class='dateico' src='./pics/date.png'></img><input type='dates' id='date' placeholder='........' class='dateinput'></input>
     </div>
