--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Simple Blog" />
     <meta name="keywords" content="-O-" />
     <link href='./jcs/m.css' rel="stylesheet" />
+    <link href='https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown-light.css' rel="stylesheet" />
 </head>
 <div class='ld' id='ld'>
     <!--加载动画层-->
