--- a/editor.html
+++ b/editor.html
@@ -1,30 +1,33 @@
 <div id="noticeWrapper" class="noticeWrapper"></div>
-<div class='lb' style='opacity:0' id='lboard'>
-    <!--Left Board-->
-    <div class='rp' id='rp'>
-        <p class='postitemp'><a class='postitema' href='#WaitWaitWait'>正在加载中..</a></p>
+<div class="panel">
+    <div class='lb' style='opacity:0' id='lboard'>
+        <!--Left Board-->
+        <div class='rp' id='rp'>
+            <p class='postitemp'><a class='postitema' href='#WaitWaitWait'>正在加载中..</a></p>
+        </div>
+        <div class='fm'>
+            <input type='search' id='search' placeholder='回车搜索' class='sinput'></input>
+            <button class='fb' onclick='chooseSth()' id='fbtn'>O_o?</button>
+        </div>
     </div>
-    <div class='fm'>
-        <input type='search' id='search' placeholder='Search...' class='sinput'></input>
-        <button class='fb' onclick='chooseSth()' id='fbtn'>O_o?</button>
-    </div>
-</div>
-<div class='rb' style='opacity:0' id='rboard'>
-    <!--SearchBoard-->
-    <div class='sbr' id='sbr'>
-        <a class='closebtn' href='javasccript:void(0);' onclick='sbrClose()'>×</a>
-    </div>
-    <!--Right Board-->
-    <div class='rbt'>
-        <!--Right Board Top-->
-        <input type='title' id='title' placeholder='Title...' class='tinput'></input>
-        <button class='adbtn' onclick='addNew()' id='adbtn'>+</button>
-        <img class='tagico' src='./pics/tag.png'></img><input type='tag' id='tag' placeholder='Tags...' class='taginput'></input>
-        <img class='dateico' src='./pics/date.png'></img><input type='dates' id='date' placeholder='........' class='dateinput'></input>
-    </div>
-    <div class='rbb'>
-        <!--Right Board Bottom-->
-        <textarea class='txt' placeholder='Write Something.....' id='content'></textarea>
+    <div class='rb' style='opacity:0' id='rboard'>
+        <!--SearchBoard-->
+        <div class='sbr' id='sbr'>
+            <a class='closebtn' href='javascript:void(0);' onclick='sbrClose()'>×</a>
+            <div class='sbrContent' id='sbrContent'></div>
+        </div>
+        <!--Right Board-->
+        <div class='rbt'>
+            <!--Right Board Top-->
+            <input type='title' id='title' placeholder='这儿写标题' class='tinput'></input>
+            <button class='adbtn' onclick='addNew()' id='adbtn'>+</button>
+            <img class='tagico' src='./pics/tag.png'></img><input type='tag' id='tag' placeholder='标签,逗号,分隔' class='taginput'></input>
+            <img class='dateico' src='./pics/date.png'></img><input type='dates' id='date' placeholder='日期/页面链接' class='dateinput'></input>
+        </div>
+        <div class='rbb'>
+            <!--Right Board Bottom-->
+            <textarea class='txt' placeholder='写点啥好呢？(Markdown)' id='content'></textarea>
+        </div>
     </div>
 </div>
 <script>
