Fix mobile view
顶层有一张隐藏图片导致移动端显示右边会多出来一截
这个问题大概三年前就存在了，我今天突然想起来了

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class='err' id='err'>
     <!--出错层-->
     <p class='ldp'>
-        <img src='./pics/err.png'></img>
+        <img src='./pics/err.png' style="max-width: 100%;"></img>
     </p>
 </div>
 <div id='container'>
