Edit post summary before publish

--- a/editor.html
+++ b/editor.html
@@ -20,7 +20,7 @@
         <div class='rbt'>
             <!--Right Board Top-->
             <input type='title' id='title' placeholder='这儿写标题' class='tinput'></input>
-            <button class='adbtn' onclick='addNew()' id='adbtn'>+</button>
+            <button class='newPostBtn' onclick='addNew()' id='newPostBtn'>+</button>
             <img class='tagico' src='./pics/tag.png'></img><input type='tag' id='tag' placeholder='标签,逗号,分隔' class='taginput'></input>
             <img class='dateico' src='./pics/date.png'></img><input type='dates' id='date' placeholder='日期/页面链接' class='dateinput'></input>
         </div>
