--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <p class='b' id='b'>
         <input id='bt' type='button' value='Start' onclick='typer()'>
     </p>
+    <script>
+        // 配置 MathJax
+        window.MathJax = {
+            tex: {
+                inlineMath: [['$', '$']],
+                displayMath: [['$$', '$$']],
+            },
+            svg: {
+                fontCache: 'global'
+            },
+        };
+    </script>
     <script src='https://cdn.jsdelivr.net/npm/crypto-js@latest/crypto-js.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/js-base64@latest/base64.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/markdown-it@latest/dist/markdown-it.min.js'></script>
     <script src='https://cdn.jsdelivr.net/npm/markdown-it-anchor@latest/dist/markdownItAnchor.umd.js'></script>
+    <!--MathJax 引入-->
+    <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/mathjax/3.2.0/es5/tex-mml-svg.min.js"></script>
     <script src='https://cdn.jsdelivr.net/gh/SomeBottle/bueue.js@latest/bueue.min.js'></script>
     <script src='./jcs/q.js'></script>
     <script src='./jcs/p.js'></script>
